<resources>
    <string name="app_name">NHLHockeyAtGoodTimes</string>
    <string name="end_date_hint">To Date</string>
    <string name="start_date_hint">From Date</string>
    <string name="btnMain">Fetch Data</string>
    <string name="btnClear">Clear</string>
    <string name="txtNextGame">Next Game:</string>
    <string name="txtFrom">From</string>
    <string name="txtTo">To</string>
</resources>
